# summer_patio_web_api_autotests

./: .env.example  README.md  project.py  pyproject.toml  requirements.txt
summerpatio_web_api_autotests/api_helpers/: api_helpers.py
summerpatio_web_api_autotests/data/: api_data.py  contacts.py  devices.py  links.py  textings.py
summerpatio_web_api_autotests/model/: application.py
summerpatio_web_api_autotests/model/components/: burger_menu.py  dish.py  header_menu.py  order.py
summerpatio_web_api_autotests/model/pages/: authorization.py  cart.py  delivery_tab.py  info_tab.py  main_page.py  menu_page.py
summerpatio_web_api_autotests/utils/: api_helper.py  path.py
summerpatio_web_autotests/data/: contacts.py  devices.py  links.py  textings.py
summerpatio_web_autotests/model/: application.py
summerpatio_web_autotests/model/components/: burger.py  dish.py  header.py  order.py
summerpatio_web_autotests/model/pages/: cart.py  delivery_tab.py  info_tab.py  main_page.py  menu_page.py
summerpatio_web_autotests/utils/: path.py
summerpatio_web_autotests/utils/allure/: attach.py
summerpatio_web_autotests/utils/notification/: telegram.json
tests/: conftest.py  test_authorization.py  test_cart.py  test_core.py  test_menu.py  test_simple.py
tests/tests_api/: test_api.py
utils/allure/: attach.py
utils/notification/: telegram.json
